--- a/views/photooxy.ejs
+++ b/views/photooxy.ejs
@@ -216,7 +216,7 @@
                             <a
                               type="button"
                               class="text-success btn-sm btn-icons"
-                              href="api/photooxy/flaming?text=ZeeoneOfc&apikey=<%= apikey %>"
+                              href="api/photooxy/flaming?text=Ryuuken&apikey=<%= apikey %>"
                               target="_blank"
                               rel="nofollow"
                               title="Try"
@@ -237,7 +237,7 @@
                             <a
                               type="button"
                               class="text-success btn-sm btn-icons"
-                              href="api/photooxy/shadow-sky?text=ZeeoneOfc&apikey=<%= apikey %>"
+                              href="api/photooxy/shadow-sky?text=Ryuuken&apikey=<%= apikey %>"
                               target="_blank"
                               rel="nofollow"
                               title="Try"
@@ -258,7 +258,7 @@
                             <a
                               type="button"
                               class="text-success btn-sm btn-icons"
-                              href="api/photooxy/metallic?text=ZeeoneOfc&apikey=<%= apikey %>"
+                              href="api/photooxy/metallic?text=Ryuuken&apikey=<%= apikey %>"
                               target="_blank"
                               rel="nofollow"
                               title="Try"
@@ -279,7 +279,7 @@
                             <a
                               type="button"
                               class="text-success btn-sm btn-icons"
-                              href="api/photooxy/naruto?text=ZeeoneOfc&apikey=<%= apikey %>"
+                              href="api/photooxy/naruto?text=Ryuuken&apikey=<%= apikey %>"
                               target="_blank"
                               rel="nofollow"
                               title="Try"
@@ -331,7 +331,7 @@
             <script>
               document.write(new Date().getFullYear())
             </script> made with <i class="tim-icons icon-heart-2"></i> by
-            <a href="https://github.com/Ryuuken97" target="_blank">ZeeoneOfc</a> for a better web.
+            <a href="https://github.com/Ryuuken97" target="_blank">Ryuuken</a> for a better web.
           </div>
         </div>
       </footer>
