--- a/views/cecan.ejs
+++ b/views/cecan.ejs
@@ -373,7 +373,7 @@
             <script>
               document.write(new Date().getFullYear())
             </script> made with <i class="tim-icons icon-heart-2"></i> by
-            <a href="https://github.com/Ryuuken97" target="_blank">ZeeoneOfc</a> for a better web.
+            <a href="https://github.com/Ryuuken97" target="_blank">Ryuuken</a> for a better web.
           </div>
         </div>
       </footer>
