--- a/views/index.ejs
+++ b/views/index.ejs
@@ -116,9 +116,9 @@ Ryuuken Api
 </div>
 <ul class="nav">
 <li>
-<a href="https://youtube.com/@ryuukengaming">
+<a href="https://youtube.com/@Ryuuken97">
 <i class="tim-icons icon-send"></i>
-<p>ZeeoneOfc</p>
+<p>Ryuuken</p>
 </a>
 </li>
 </ul>
@@ -406,7 +406,8 @@ document.write(txt);
 <p> Loli Killers</p>
 <p> Rynz</p>
 <p> Eka Danuarta</p>
-<p> ZeeoneOfc </p>
+<p> ZeeoneOfc</p>
+<p> Ryuuken </p>
 <p> Creative Time [ For Template ]</p>
 <p> ALL HUMAN</p>
 </tr>
@@ -432,7 +433,7 @@ Ryuuken
 <script>
 document.write(new Date().getFullYear())
 </script> made with <i class="tim-icons icon-heart-2"></i> by
-<a href="https://github.com/Ryuuken97" target="_blank">Zeeoneofc</a>.
+<a href="https://github.com/Ryuuken97" target="_blank">Ryuuken</a>.
 </div>
 </div>
 </footer>
